# zpg-proj

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Application/: Engine.cpp  Engine.h
Application/Configuration/: AGlobalConfig.cpp  AGlobalConfig.h
Application/DebugErrorMessages/: DebugErrorMessages.cpp  DebugErrorMessages.h
Application/GameLogic/4 Spheres/: GameLogic_4Spheres.cpp  GameLogic_4Spheres.h  GameLogic_4Spheres_LoadMap.cpp
Application/GameLogic/Abstract/: AnyGameLogic.cpp  AnyGameLogic.h  GameLogic_4Spheres_LoadMap.cpp
Application/GameLogic/Overworld/: GameLogic_Overworld.cpp  GameLogic_Overworld.h  GameLogic_Overworld_LoadMap.cpp
Application/GameLogic/Solar system/: GameLogic_SolarSystem.cpp  GameLogic_SolarSystem.h  GameLogic_SolarSystem_LoadMap.cpp
Application/InputHandler/: MovesetInputManager.cpp  MovesetInputManager.h
Application/InputHandler/KeyCallbacks/: KeyCallbacks.cpp  KeyCallbacks.h
Application/Managers/EngineResources/: Map.cpp  Map.h  ResourcesManager.cpp  ResourcesManager.h
Application/Managers/EngineResources/PremadeMaps/: MapCreator.h  MapCreator_4Spheres.cpp  MapCreator_Overworld.cpp  MapCreator_SolarSystem.cpp
Application/Managers/Map/: ResourcesManager.cpp  ResourcesManager.h
Application/Managers/ShaderLinking/: MapToShaderLinker.cpp  MapToShaderLinker.h
Application/Managers/ShaderLinking/ShaderObjectSet/: ShaderObjectSet.h
Application/ObjectsManager/Map/: Map.cpp  Map.h  MapManager.cpp  MapManager.h
Application/ObjectsManager/Map/PremadeMaps/: MapCreator.cpp  MapCreator.h  MapCreator_4Spheres.cpp  MapCreator_Overworld.cpp  MapCreator_SolarSystem.cpp  PremadeMapsFactory.cpp  PremadeMapsFactory.h
Application/ObjectsManager/ShaderLinking/: MapToShaderLinker.cpp  MapToShaderLinker.h
Application/ObjectsManager/ShaderLinking/ShaderObjectSet/: ShaderObjectSet.cpp  ShaderObjectSet.h
Model/: Material.cpp  Material.h  ModelStamp.h  StandardisedModel.cpp  StandardisedModel.h
Model/Abstract/: BaseModelData.cpp  BaseModelData.h  RenderableObject.cpp  RenderableObject.h
Model/Animation/: BezierAnimation.cpp  BezierAnimation.h
Model/Animation/Abstract/: AnyAnimation.cpp  AnyAnimation.h
Model/Controller/: ModelController.cpp  ModelController.h
Model/Factory/: ModelFactory.cpp  ModelFactory.h
Model/Texture/: Texture.cpp  Texture.h
Model/Texture/Controller/: TextureController.cpp  TextureController.h
Shaders/: GLSLShader.cpp  GLSLShader.h  ShaderType.h
Shaders/Camera/: Camera.cpp  Camera.h
Shaders/Camera/CameraObserver/: CameraObserver.cpp  CameraObserver.h
Shaders/Lighting/: Light.cpp  Light.h  LightDirectional.cpp  LightDirectional.h  LightPoint.cpp  LightPoint.h  LightSpot.cpp  LightSpot.h  LightsArrayUniform.cpp  LightsArrayUniform.h
Shaders/Lighting/Abstract/: LightType.h  RenderableLight.cpp  RenderableLight.h
Shaders/Lighting/Uniforms/: LightArrayDirectionalUniform.cpp  LightArrayDirectionalUniform.h  LightsArrayPointUniform.cpp  LightsArrayPointUniform.h  LightsArraySpotUniform.cpp  LightsArraySpotUniform.h
Shaders/ShaderProgram/: ShaderHandler.cpp  ShaderHandler.h  ShaderHandler_Render.cpp  ShaderHandler_SaveLocation.cpp
Shaders/ShaderProgram/ShaderBase/: ShaderBase.cpp  ShaderBase.h
Shaders/ShaderProgram/ShaderHandlerFactory/: ShaderHandlerFactory.cpp  ShaderHandlerFactory.h
Shaders/ShadersCode/LegacyShaderStrings/: LegacyShaderStrings.cpp  LegacyShadersStrings.h
Shaders/ShadersCode/Loader/: ShaderFileLoader.cpp  ShaderFileLoader.h
Shaders/ShadersCode/ShaderFiles/: BlinnPhongClean.frag  ConstantColored.frag  ConstantTrue.frag  Crosshair.frag  CubemapSkybox.frag  CubemapSkybox.vert  LambertClean.frag  MVPNClean.vert  MVPNTexture.vert  PhongClean.frag  PhongTexture.frag
Transformations/Composite/: TransfComposite.cpp  TransfComposite.h
Transformations/Composite/Abstract/: Transformation.cpp  Transformation.h
Transformations/Composite/Factory/: TransformationFactory.cpp  TransformationFactory.h
Transformations/Composite/Transformations/: Move.cpp  Move.h  Rotate.cpp  Rotate.h  Scale.cpp  Scale.h
